# NG-RealUP

./: OLD_setup.py  README.md  README_RU.md  inference_realesrgan.py  inference_realesrgan_video.py  pyproject.toml  requirements.txt  setup.py
basicsr/: version.py
docs/: Training.md  Training_RU.md
realesrgan/: __init__.py  train.py  utils.py  version.py
realesrgan/archs/: srvgg_arch.py
realesrgan/models/: realesrgan_model.py  realesrnet_model.py
